# group16

./: .env.example  CLAUDE.md  Taskfile.yml  compose.yml
.github/workflows/: render-docs.yml
client/atmos_extension/: Dockerfile  biome.json  package.json  pnpm-lock.yaml  wxt.config.ts
client/atmos_extension/src/api/: apiClient.ts
client/atmos_extension/src/api/types/: AdjustLigtingRequest.ts  GetLigtingSignalsRequest.ts  Url.ts
client/atmos_extension/src/entrypoints/popup/: main.ts
docs/: design.typ
docs/typst/: design.typ  manual.typ
server/: .gitignore  Cargo.toml  Dockerfile
server/crates/atmos/: Cargo.toml
server/crates/atmos/src/: main.rs
server/crates/atmos_core/: Cargo.toml
server/crates/atmos_core/src/: lib.rs
server/crates/atmos_server/: Cargo.toml
server/crates/atmos_server/src/: domain.rs  outbound.rs
server/crates/atmos_server/src/domain/: models.rs  service.rs
server/crates/atmos_server/src/domain/models/: atmosfreq.rs  lighting.rs
server/crates/atmos_server/src/domain/ports/: lighting.rs
server/crates/atmos_server/src/domain/service/: lighting.rs
server/crates/atmos_server/src/inbound/: http.rs
server/crates/atmos_server/src/inbound/http/: api.rs  routes.rs
server/crates/atmos_server/src/inbound/http/routes/: adjust_lighting.rs  get_lighting_signals.rs
server/crates/atmos_server/src/outbound/: remo.rs
server/crates/remo_api/: Cargo.toml
server/crates/remo_sdk/: Cargo.toml
server/crates/remo_sdk/src/: client.rs  lib.rs
taskfile/: Taskfile.extension.yml  Taskfile.server.yml
(+10 files in other folders)
