[package]
name = "atmos_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio.workspace = true
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3"
color-eyre.workspace = true
thiserror = "2.0.12"
serde = { version = "1", features = ["std", "derive"] }
trait-variant = "0.1.2"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
ts-rs = "11.0"
remo_api = { path = "../remo_api" }
